adjust comment and reaction placement
