# main.go
@@ -36,11 +36,10 @@ func main() {
 	withLogin := e.Group("")
 	withLogin.Use(handler.CheckLogin)
 
-	withLogin.GET("/meeting/:meetingId/comments", handler.GetCommentFromID)
-	withLogin.GET("/meeting/:meetingId/reactions", handler.GetReactionFromID)
-
 	withLogin.GET("/meeting", handler.GetMeeting)
 	withLogin.GET("/meeting/:meetingId", handler.GetMeetingFromID)
+	withLogin.GET("/meeting/:meetingId/comments", handler.GetCommentFromID)
+	withLogin.GET("/meeting/:meetingId/reactions", handler.GetReactionFromID)
 
 	withAdmin := withLogin.Group("")
 	withAdmin.Use(handler.CheckIsAdmin)
